--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </a>
             </div>
             <!-- Mockup Placeholder Image for visual appeal -->
-            <div class="mt-16 relative w-full max-w-5xl mx-auto">
+            <div class="mt-16 relative max-w-5xl mx-auto">
                  <img src="https://raw.githubusercontent.com/suryaapratapp/TheThirdPerson.AI/main/Gemini_Generated_Image_45f3hy45f3hy45f3.png"
                       alt="The Third Person AI App Interface Mockup"
                       onerror="this.onerror=null; this.src='https://placehold.co/1000x500/1a202c/6d28d9?text=The+Third+Person+AI+Interface+Mockup';"
