--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
                 <p class="mt-4 text-xl text-indigo-200">
                     Join the waitlist to be among the first to experience real-time AI relationship coaching. Limited spots available for the private beta.
                 </p>
-                <form class="mt-8 max-w-lg mx-auto space-y-4">
+                <!-- Form to capture emails. ID added for JS handling. -->
+                <form id="waitlistForm" class="mt-8 max-w-lg mx-auto space-y-4">
                     <input type="email" placeholder="Enter your email address" required
                            class="w-full px-6 py-4 rounded-xl border-2 border-indigo-500 bg-white text-gray-900 focus:ring-indigo-500 focus:border-indigo-500 transition"/>
                     <button type="submit" class="w-full px-6 py-4 text-lg font-bold rounded-xl bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-xl shadow-indigo-500/50">
