--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!-- The Third Person AI Landing Page - Real-time Relationship Communication Coach -->
-<!DOCTYPE html>
+<!-- The Third Person AI Landing Page - Real-time Relationship Communication Coach --><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Third Person | AI Communication Coach for Relationships</title>
-    <!-- Load Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Load Inter Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Load Tailwind CSS --><script src="https://cdn.tailwindcss.com"></script>
+    <!-- Load Inter Font --><link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -42,8 +39,7 @@
 </head>
 <body>
 
-    <!-- Navigation Bar -->
-    <header class="sticky top-0 z-50 bg-[#0d111c]/90 backdrop-blur-sm shadow-lg">
+    <!-- Navigation Bar --><header class="sticky top-0 z-50 bg-[#0d111c]/90 backdrop-blur-sm shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <a href="#" class="text-2xl font-extrabold text-gradient tracking-tight">
                 The Third Person.AI
@@ -54,8 +50,7 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <main>
+    <!-- Hero Section --><main>
         <section id="hero" class="pt-24 pb-32 text-center max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight leading-tight">
                 Strengthen Your <span class="text-gradient">Communication,</span> Deeper Your Bond.
@@ -71,17 +66,15 @@
                     Learn How It Works
                 </a>
             </div>
-            <!-- Mockup Placeholder Image for visual appeal -->
-            <div class="mt-16 relative w-full max-w-[1000px] mx-auto">
+            <!-- Mockup Placeholder Image for visual appeal --><div class="mt-16 relative w-full max-w-[1000px] mx-auto">
                  <img src="https://raw.githubusercontent.com/suryaapratapp/TheThirdPerson.AI/main/Gemini_Generated_Image_45f3hy45f3hy45f3.png"
-                      alt="The Third Person AI App Interface Mockup"
+                      alt="The Third Person AI Long-Distance Voice Call Mockup"
                       onerror="this.onerror=null; this.src='https://placehold.co/1000x500/1a202c/6d28d9?text=The+Third+Person+AI+Interface+Mockup';"
                       class="rounded-3xl shadow-2xl shadow-indigo-900/50 border-2 border-indigo-700/50 transition-transform duration-500 hover:scale-[1.01] w-full h-[500px] object-cover"/>
             </div>
         </section>
 
-        <!-- Innovation & How It Works Section -->
-        <section id="features" class="py-20 bg-[#151a28] border-t border-b border-gray-800">
+        <!-- Innovation & How It Works Section --><section id="features" class="py-20 bg-[#151a28] border-t border-b border-gray-800">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center">
                     <h2 class="text-4xl font-extrabold text-white">The AI Difference: Analysis to Action</h2>
@@ -91,11 +84,9 @@
                 </div>
 
                 <div class="mt-16 grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <!-- Feature 1: Real-Time Nudges -->
-                    <div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
+                    <!-- Feature 1: Real-Time Nudges --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
                         <div class="text-indigo-400 text-3xl mb-4">
-                            <!-- SVG Icon for Real-Time -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-zap"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>
+                            <!-- SVG Icon for Real-Time --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-zap"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-3">Real-Time Proactive Nudges</h3>
                         <p class="text-gray-400">
@@ -103,11 +94,9 @@
                         </p>
                     </div>
 
-                    <!-- Feature 2: Personalized Post-Conversation Reports -->
-                    <div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
+                    <!-- Feature 2: Personalized Post-Conversation Reports --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
                         <div class="text-indigo-400 text-3xl mb-4">
-                             <!-- SVG Icon for Report -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
+                             <!-- SVG Icon for Report --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-3">Persona-Driven Coaching (Counsellor, Friend, or Therapist)</h3>
                         <p class="text-gray-400">
@@ -115,11 +104,9 @@
                         </p>
                     </div>
 
-                    <!-- Feature 3: Relationship Dashboard -->
-                    <div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
+                    <!-- Feature 3: Relationship Dashboard --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
                         <div class="text-indigo-400 text-3xl mb-4">
-                            <!-- SVG Icon for Dashboard -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
+                            <!-- SVG Icon for Dashboard --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-3">Objective Relationship Metrics</h3>
                         <p class="text-gray-400">
@@ -130,8 +117,7 @@
             </div>
         </section>
 
-        <!-- Use Case / Target Audience Section -->
-        <section class="py-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+        <!-- Use Case / Target Audience Section --><section class="py-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl font-extrabold text-white">Who Needs The Third Person?</h2>
             <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="p-6 rounded-xl border border-gray-800 bg-[#0d111c]">
@@ -154,33 +140,31 @@
             <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-4xl font-extrabold text-white">Ready for Better Conversations?</h2>
                 <p class="mt-4 text-xl text-indigo-200">
-                    Join the waitlist to be among the first to experience real-time AI relationship coaching. Limited spots available for the private beta.
+                    Join the waitlist to be among the first to experience real-time AI relationship coaching. Email us to secure your spot for the private beta.
                 </p>
-                <!-- Form to capture emails. ID added for JS handling. -->
-                <form id="waitlistForm" class="mt-8 max-w-lg mx-auto space-y-4">
-                    <input type="email" placeholder="Enter your email address" required
-                           class="w-full px-6 py-4 rounded-xl border-2 border-indigo-500 bg-white text-gray-900 focus:ring-indigo-500 focus:border-indigo-500 transition"/>
-                    <button type="submit" class="w-full px-6 py-4 text-lg font-bold rounded-xl bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-xl shadow-indigo-500/50">
+                <!-- Replaced form/input with a mailto link -->
+                <div class="mt-8 max-w-lg mx-auto space-y-4">
+                    <a href="mailto:info@thethirdperson.ai?subject=Waitlist%20Signup%20Request%20-%20TheThirdPerson.AI" 
+                       class="inline-block w-full px-6 py-4 text-lg font-bold rounded-xl bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-xl shadow-indigo-500/50" 
+                       style="text-decoration: none;">
                         Secure My Spot
-                    </button>
+                    </a>
                     <p class="text-xs text-indigo-200 mt-2">
                         We prioritize your privacy. All data is securely encrypted and never shared.
                     </p>
-                </form>
+                </div>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-[#0d111c] py-10 border-t border-gray-800">
+    <!-- Footer --><footer class="bg-[#0d111c] py-10 border-t border-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <div class="text-xl font-extrabold text-gradient">The Third Person.AI</div>
             <p class="mt-4 text-sm text-gray-500">
                 &copy; 2025 Thethirdperson.ai. All rights reserved. | <a href="#" class="hover:text-gray-300">Privacy Policy</a> | <a href="#" class="hover:text-gray-300">Terms of Service</a>
             </p>
             <div class="mt-6 flex justify-center space-x-6 text-gray-400">
-                <!-- Placeholder Social Icons (using text/emoji for simplicity) -->
-                <a href="#" class="hover:text-indigo-400 transition">Twitter</a>
+                <!-- Placeholder Social Icons (using text/emoji for simplicity) --><a href="#" class="hover:text-indigo-400 transition">Twitter</a>
                 <a href="#" class="hover:text-indigo-400 transition">LinkedIn</a>
                 <a href="#" class="hover:text-indigo-400 transition">Instagram</a>
             </div>
