--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     <!-- Navigation Bar --><header class="sticky top-0 z-50 bg-[#0d111c]/90 backdrop-blur-sm shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <a href="#" class="text-2xl font-extrabold text-gradient tracking-tight">
-                The Third Person.AI
+                <img src="https://raw.githubusercontent.com/suryaapratapp/TheThirdPerson.AI/main/logo_thethirdperson.png" 
+                     alt="The Third Person.AI Logo" 
+                     class="w-8 h-8 mr-2 rounded-full"/>
+                <span class="text-gradient">The Third Person.AI</span>
             </a>
             <a href="#signup" class="px-5 py-2 text-sm font-semibold rounded-full bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-lg">
                 Join Waitlist
