--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Navigation Bar --><header class="sticky top-0 z-50 bg-[#0d111c]/90 backdrop-blur-sm shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-extrabold text-gradient tracking-tight">
+            <a href="#" class="flex items-center text-2xl font-extrabold tracking-tight">
                 <img src="https://raw.githubusercontent.com/suryaapratapp/TheThirdPerson.AI/main/logo_thethirdperson.png" 
                      alt="The Third Person.AI Logo" 
                      class="w-8 h-8 mr-2 rounded-full"/>
