--- a/index.html
+++ b/index.html
@@ -87,23 +87,23 @@
                 </div>
 
                 <div class="mt-16 grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <!-- Feature 1: Real-Time Misunderstanding Prevention --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
+                    <!-- Feature 1: Misunderstanding Prevention --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
                         <div class="text-indigo-400 text-3xl mb-4">
                             <!-- SVG Icon for Real-Time --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-zap"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-white mb-3">Real-Time Misunderstanding Prevention</h3>
+                        <h3 class="text-2xl font-bold text-white mb-3">Misunderstanding Prevention</h3>
                         <p class="text-gray-400">
                             Receive discreet, private suggestions during calls or texts. The AI detects mounting tension or misinterpretation due to lack of non-verbal cues and gently guides you toward constructive communication.
                         </p>
                     </div>
 
-                    <!-- Feature 2: Deep Behavior & Trait Insights --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
+                    <!-- Feature 2: Deep Behavior Insights --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
                         <div class="text-indigo-400 text-3xl mb-4">
                              <!-- SVG Icon for Report --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-white mb-3">Deep Behavior & Trait Insights</h3>
+                        <h3 class="text-2xl font-bold text-white mb-3">Deep Behavior Insights</h3>
                         <p class="text-gray-400">
-                            Get insight into *each person's behavior*, positive and negative communication traits, and personalized **recommendations for good communication** tailored to your LDR's unique patterns.
+                            Get insight into each person's behavior, positive and negative communication traits, and personalized recommendations for good communication tailored to your LDR's unique patterns.
                         </p>
                     </div>
 
@@ -113,7 +113,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-3">Objective LDR Metrics & Comparisons</h3>
                         <p class="text-gray-400">
-                            View objective data on your shared communication health: talk time balance, positivity score, conflict frequency, and **regular communication comparisons** to track progress over the distance.
+                            View objective data on your shared communication health: talk time balance, positivity score, conflict frequency, and regular communication comparisons to track progress over the distance.
                         </p>
                     </div>
                 </div>
