--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <a href="#" class="flex items-center text-2xl font-extrabold tracking-tight">
                 <img src="https://raw.githubusercontent.com/suryaapratapp/TheThirdPerson.AI/main/logo_thethirdperson.png" 
-                     alt="The Third Person.AI Logo" 
-                     class="w-10 h-10 mr-1 rounded-full"/>
+                    alt="The Third Person.AI Logo" 
+                    class="w-10 h-10 mr-1 rounded-full"/>
                 <span class="text-gradient">The Third Person AI</span>
             </a>
             <a href="#signup" class="px-5 py-2 text-sm font-semibold rounded-full bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-lg">
@@ -58,8 +58,9 @@
             <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight leading-tight">
                 Strengthen Your Bond, No Matter the <span class="text-gradient">Distance.</span>
             </h1>
-            <p class="mt-6 text-xl text-gray-400 max-w-3xl mx-auto">
-                The AI guide that listens to your long-distance calls and messages, offering unbiased, constructive coaching to bridge the communication gap as <br/> <span class="font-bold text-white">The Third Person</span>.
+            <!-- FIX 1: Text centered -->
+            <p class="mt-6 text-xl text-gray-400 max-w-3xl mx-auto text-center">
+                The AI guide that listens to your long-distance calls and messages, offering unbiased, constructive coaching to bridge the communication gap as <br/> <span class="font-bold text-white">The Third Person</span>.
             </p>
             <div class="mt-10 space-y-4 sm:space-y-0 sm:space-x-6">
                 <a href="#signup" class="inline-block px-10 py-4 text-lg font-bold rounded-full bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-xl shadow-indigo-500/50">
@@ -70,10 +71,10 @@
                 </a>
             </div>
             <!-- Mockup Placeholder Image for visual appeal --><div class="mt-16 relative w-full max-w-[1000px] mx-auto">
-                 <img src="https://raw.githubusercontent.com/suryaapratapp/TheThirdPerson.AI/main/Gemini_Generated_Image_45f3hy45f3hy45f3.png"
-                      alt="The Third Person AI Long-Distance Voice Call Mockup"
-                      onerror="this.onerror=null; this.src='https://placehold.co/1000x500/1a202c/6d28d9?text=The+Third+Person+AI+Interface+Mockup';"
-                      class="rounded-3xl shadow-2xl shadow-indigo-900/50 border-2 border-indigo-700/50 transition-transform duration-500 hover:scale-[1.01] w-full h-[500px] object-cover"/>
+                   <img src="https://raw.githubusercontent.com/suryaapratapp/TheThirdPerson.AI/main/Gemini_Generated_Image_45f3hy45f3hy45f3.png"
+                         alt="The Third Person AI Long-Distance Voice Call Mockup"
+                         onerror="this.onerror=null; this.src='https://placehold.co/1000x500/1a202c/6d28d9?text=The+Third+Person+AI+Interface+Mockup';"
+                         class="rounded-3xl shadow-2xl shadow-indigo-900/50 border-2 border-indigo-700/50 transition-transform duration-500 hover:scale-[1.01] w-full h-[500px] object-cover"/>
             </div>
         </section>
 
@@ -81,77 +82,80 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center">
                     <h2 class="text-4xl font-extrabold text-white">Bridging the Miles: AI Analysis for Long-Distance Love</h2>
-                    <p class="mt-4 text-xl text-gray-400 max-w-4xl mx-auto">
-                        We analyze your digital communication (voice, text, video) for emotional and verbal cues in real-time and post-session to solve long-distance relationship challenges and foster deeper connection.
+                    <!-- FIX 2: Text centered -->
+                    <p class="mt-4 text-xl text-gray-400 max-w-4xl mx-auto text-center">
+                        We analyze your digital communication (voice, text, video) for emotional and verbal cues in real-time and post-session to solve long-distance relationship challenges and foster deeper connection.
                     </p>
                 </div>
 
-                <div class="mt-16 grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <!-- Feature 1: Misunderstanding Prevention --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
+                <div class="mt-16 grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
+                    <!-- Feature 1: Misunderstanding Prevention -->
+                    <!-- FIX 3: Content aligned left -->
+                    <div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
                         <div class="text-indigo-400 text-3xl mb-4">
                             <!-- SVG Icon for Real-Time --><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-zap"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-3">Misunderstanding Prevention</h3>
                         <p class="text-gray-400">
-                            Receive discreet, private suggestions during calls or texts. The AI detects mounting tension or misinterpretation due to lack of non-verbal cues and gently guides you toward constructive communication.
+                            Receive discreet, private suggestions during calls or texts. The AI detects mounting tension or misinterpretation due to lack of non-verbal cues and gently guides you toward constructive communication.
                         </p>
                     </div>
 
-                    <!-- Feature 2: Deep Behavior Insights --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
+                    <!-- Feature 2: Deep Behavior Insights -->
+                    <!-- FIX 3: Content aligned left -->
+                    <div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
                         <div class="text-indigo-400 text-3xl mb-4">
                              <!-- SVG Icon for Report --><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-3">Deep Behavior Insights</h3>
                         <p class="text-gray-400">
-                            Get insight into each person's behavior, positive and negative communication traits, and personalized recommendations for good communication tailored to your LDR's unique patterns.
+                            Get insight into each person's behavior, positive and negative communication traits, and personalized recommendations for good communication tailored to your LDR's unique patterns.
                         </p>
                     </div>
 
-                    <!-- Feature 3: Objective LDR Metrics & Comparisons --><div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
+                    <!-- Feature 3: Objective LDR Metrics & Comparisons -->
+                    <!-- FIX 3: Content aligned left -->
+                    <div class="feature-card p-6 rounded-xl border border-gray-700 hover:border-indigo-500">
                         <div class="text-indigo-400 text-3xl mb-4">
                             <!-- SVG Icon for Dashboard --><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-3">Objective LDR Metrics & Comparisons</h3>
                         <p class="text-gray-400">
-                            View objective data on your shared communication health: talk time balance, positivity score, conflict frequency, and regular communication comparisons to track progress over the distance.
+                            View objective data on your shared communication health: talk time balance, positivity score, conflict frequency, and regular communication comparisons to track progress over the distance.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
 
-                <section class="py-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-4xl font-extrabold text-white">Private Insights: Ask The Third Person</h2>
-            <p class="mt-4 text-xl text-gray-400 max-w-4xl mx-auto">
-                Our AI offers a unique, third-person perspective, allowing you to privately query your communication data for objective answers and decision-making clarity.
-            </p>
-            <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left">
-                    <h3 class="text-lg font-bold text-indigo-400 mb-2">1. Behavior Trends </h3>
-                    <p class="text-gray-300 italic">"How has my partner's positive or negative language changed in the last month?"</p>
-                </div>
-                <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left">
-                    <h3 class="text-lg font-bold text-indigo-400 mb-2">2. Conflict Resolution</h3>
-                    <p class="text-gray-300 italic">"Based on our secure data, what is the root cause of our recurring arguments over scheduling?"</p>
-                </div>
-                <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left">
-                    <h3 class="text-lg font-bold text-indigo-400 mb-2">3. Decision-Making</h3>
-                    <p class="text-gray-300 italic">"What are the pros and cons of moving dates, from a neutral, third-person perspective?"</p>
-                </div>
-                <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left">
-                    <h3 class="text-lg font-bold text-indigo-400 mb-2">4. Partner Appreciation</h3>
-                    <p class="text-gray-300 italic">"What are my partner's positive communication traits that I should recognize more often?"</p>
-                </div>
-            </div>
-        </section>
+        <!-- Private Insights: Ask The Third Person Section -->
+        <section class="py-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            <h2 class="text-4xl font-extrabold text-white">Private Insights: Ask The Third Person</h2>
+            <p class="mt-4 text-xl text-gray-400 max-w-4xl mx-auto">
+                Our AI offers a unique, third-person perspective, allowing you to privately query your communication data for objective answers and decision-making clarity.
+            </p>
+            <!-- FIX 5: Aligned cards nicely in the center by setting a max-w-6xl on the grid container -->
+            <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto">
+                <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left hover:shadow-lg hover:shadow-indigo-500/30 transition duration-300">
+                    <h3 class="text-lg font-bold text-indigo-400 mb-2">1. Behavior Trends </h3>
+                    <p class="text-gray-300 italic text-sm">"How has my partner's positive or negative language changed in the last month?"</p>
+                </div>
+                <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left hover:shadow-lg hover:shadow-indigo-500/30 transition duration-300">
+                    <h3 class="text-lg font-bold text-indigo-400 mb-2">2. Conflict Resolution</h3>
+                    <p class="text-gray-300 italic text-sm">"Based on our secure data, what is the root cause of our recurring arguments over scheduling?"</p>
+                </div>
+                <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left hover:shadow-lg hover:shadow-indigo-500/30 transition duration-300">
+                    <h3 class="text-lg font-bold text-indigo-400 mb-2">3. Decision-Making</h3>
+                    <p class="text-gray-300 italic text-sm">"What are the pros and cons of moving dates, from a neutral, third-person perspective?"</p>
+                </div>
+                <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left hover:shadow-lg hover:shadow-indigo-500/30 transition duration-300">
+                    <h3 class="text-lg font-bold text-indigo-400 mb-2">4. Partner Appreciation</h3>
+                    <p class="text-gray-300 italic text-sm">"What are my partner's positive communication traits that I should recognize more often?"</p>
+                </div>
+            </div>
+        </section>
 
-
-
-
-
-        
-
-        <!-- NEW/RE-INTEGRATED SECTION: Use Case / Target Audience Section - ENHANCED DESIGN -->
+        <!-- Who Benefits Section -->
         <section class="py-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-4xl font-extrabold text-white">Who Benefits from The Third Person AI?</h2>
             <p class="mt-4 text-xl text-gray-400 max-w-4xl mx-auto">
@@ -196,33 +200,6 @@
             </div>
         </section>
 
-
-
-
-
-
-
-
-
-        
-        <!-- Use Case / Target Audience Section --><section class="py-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-3xl font-extrabold text-white">Who Needs The Third Person?</h2>
-            <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="p-6 rounded-xl border border-gray-800 bg-[#0d111c]">
-                    <h3 class="text-xl font-bold text-indigo-400 mb-2">Long-Distance Couples</h3>
-                    <p class="text-gray-400">Keep your connection strong across miles with proactive coaching and deep communication insights.</p>
-                </div>
-                <div class="p-6 rounded-xl border border-gray-800 bg-[#0d111c]">
-                    <h3 class="text-xl font-bold text-indigo-400 mb-2">Cohabiting Partners</h3>
-                    <p class="text-gray-400">Identify and resolve daily frictions before they escalate into recurring, damaging arguments.</p>
-                </div>
-                <div class="p-6 rounded-xl border border-gray-800 bg-[#0d111c]">
-                    <h3 class="text-xl font-bold text-indigo-400 mb-2">Families & Friends</h3>
-                    <p class="text-gray-400">Improve complex group dynamics, ensuring everyone feels heard and communication is balanced.</p>
-                </div>
-            </div>
-        </section>
-
         <!-- CTA / Signup Section -->
         <section id="signup" class="py-20 bg-indigo-700/20 text-center">
             <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -230,11 +207,11 @@
                 <p class="mt-4 text-xl text-indigo-200">
                     Join the waitlist to be among the first to experience real-time AI relationship coaching. Email us to secure your spot for the private beta.
                 </p>
-                <!-- Replaced form/input with a mailto link -->
+                <!-- Mailto link for sign up -->
                 <div class="mt-8 max-w-lg mx-auto space-y-4">
                     <a href="mailto:info@thethirdperson.ai?subject=Waitlist%20Signup%20Request%20-%20TheThirdPerson.AI" 
-                       class="inline-block w-full px-6 py-4 text-lg font-bold rounded-xl bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-xl shadow-indigo-500/50" 
-                       style="text-decoration: none;">
+                        class="inline-block w-full px-6 py-4 text-lg font-bold rounded-xl bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-xl shadow-indigo-500/50" 
+                        style="text-decoration: none;">
                         Secure My Spot
                     </a>
                     <p class="text-xs text-indigo-200 mt-2">
