--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </h1>
             <!-- FIX 1: Text centered -->
             <p class="mt-6 text-xl text-gray-400 max-w-3xl mx-auto text-center">
-                The AI guide that listens to your long-distance calls and messages, offering unbiased, constructive coaching to bridge the communication gap as <br/> <span class="font-bold text-white">The Third Person</span>.
+                The AI agent that listens to your long-distance calls and messages, offering unbiased, constructive coaching to bridge the communication gap as <br/> <span class="font-bold text-white">The Third Person</span>.
             </p>
             <div class="mt-10 space-y-4 sm:space-y-0 sm:space-x-6">
                 <a href="#signup" class="inline-block px-10 py-4 text-lg font-bold rounded-full bg-indigo-600 text-white cta-button hover:bg-indigo-500 shadow-xl shadow-indigo-500/50">
@@ -107,7 +107,7 @@
                         <div class="text-indigo-400 text-3xl mb-4">
                              <!-- SVG Icon for Report --><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-white mb-3">Deep Behavior Insights</h3>
+                        <h3 class="text-2xl font-bold text-white mb-3">Deep Behavior & Trait Insights</h3>
                         <p class="text-gray-400">
                             Get insight into each person's behavior, positive and negative communication traits, and personalized recommendations for good communication tailored to your LDR's unique patterns.
                         </p>
@@ -156,7 +156,7 @@
         </section>
 
         <!-- Who Benefits Section -->
-        <section class="py-20 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+        <section class="py-20 bg-[#151a28] border-t border-b border-gray-800">
             <h2 class="text-4xl font-extrabold text-white">Who Benefits from The Third Person AI?</h2>
             <p class="mt-4 text-xl text-gray-400 max-w-4xl mx-auto">
                 While we specialize in distance, our objective communication analysis helps resolve conflict and deepen connection in any relationship.
