--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </section>
 
         <!-- Who Benefits Section -->
-        <section class="py-20 bg-[#151a28] border-t border-b border-gray-800">
+        <section class="py-20 bg-[#151a28] max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-4xl font-extrabold text-white">Who Benefits from The Third Person AI?</h2>
             <p class="mt-4 text-xl text-gray-400 max-w-4xl mx-auto">
                 While we specialize in distance, our objective communication analysis helps resolve conflict and deepen connection in any relationship.
