--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
             <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto">
                 <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left hover:shadow-lg hover:shadow-indigo-500/30 transition duration-300">
                     <h3 class="text-lg font-bold text-indigo-400 mb-2">1. Behavior Trends </h3>
-                    <p class="text-gray-300 italic text-sm">"How has my partner's positive or negative language changed in the last month?"</p>
+                    <p class="text-gray-300 italic text-sm">"How has my partner's positive or negative language changed in the last month?" <br/><br/> "What events usually trigger a shift in tone or mood?" <br/><br/> "How often do our conversations show mutual understanding versus frustration?"</p>
                 </div>
                 <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left hover:shadow-lg hover:shadow-indigo-500/30 transition duration-300">
                     <h3 class="text-lg font-bold text-indigo-400 mb-2">2. Conflict Resolution</h3>
-                    <p class="text-gray-300 italic text-sm">"Based on our secure data, what is the root cause of our recurring arguments over scheduling?"</p>
+                    <p class="text-gray-300 italic text-sm">"Based on our secure data, what is the root cause of our recurring arguments over scheduling?"<br/><br/>“Which specific topics most often cause friction?”<br/><br/> “What communication strategies have worked best to calm conflicts?”</p>
                 </div>
                 <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left hover:shadow-lg hover:shadow-indigo-500/30 transition duration-300">
                     <h3 class="text-lg font-bold text-indigo-400 mb-2">3. Decision-Making</h3>
-                    <p class="text-gray-300 italic text-sm">"What are the pros and cons of moving dates, from a neutral, third-person perspective?"</p>
+                    <p class="text-gray-300 italic text-sm">“What past decisions have led to similar communication patterns?”<br/><br/>“Do our conversations show mutual readiness for this change?”<br/><br/>“Have we discussed practical and emotional aspects equally?”</p>
                 </div>
                 <div class="p-6 rounded-xl border border-indigo-700 bg-[#1a202c] text-left hover:shadow-lg hover:shadow-indigo-500/30 transition duration-300">
                     <h3 class="text-lg font-bold text-indigo-400 mb-2">4. Partner Appreciation</h3>
-                    <p class="text-gray-300 italic text-sm">"What are my partner's positive communication traits that I should recognize more often?"</p>
+                    <p class="text-gray-300 italic text-sm">"What are my partner's positive communication traits that I should recognize more often?"<br/><br/>“Which types of messages make my partner feel most valued?”<br/><br/>“How often do I express gratitude or praise?”</p>
                 </div>
             </div>
         </section>
